feat:远程调用,根据对应的集群去操作获取对应模块下的数据

--- a/cloud-demo/pom.xml
+++ b/cloud-demo/pom.xml
@@ -11,6 +11,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>services</module>
+        <module>Model</module>
     </modules>
     <groupId>com.eastwind</groupId>
     <artifactId>cloud-demo</artifactId>
