feat: nacos 动态刷新注解局部式

--- a/cloud-demo/services/pom.xml
+++ b/cloud-demo/services/pom.xml
@@ -24,6 +24,11 @@
     </properties>
 
     <dependencies>
+        <!--        配置中心-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.eastwind</groupId>
             <artifactId>Model</artifactId>
