--- a/cloud-demo/services/services-order/src/main/resources/application.properties
+++ b/cloud-demo/services/services-order/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 # 服务名称
 spring.application.name=service-order
+
 # 服务端口
 server.port=8000
 
 # 注册中心地址
 spring.cloud.nacos.server-addr=127.0.0.1:8848
+
+# 导入nacos中的配置属性
+spring.config.import=nacos:service-order.properties
