--- a/cloud-demo/services/services-product/src/main/resources/application.properties
+++ b/cloud-demo/services/services-product/src/main/resources/application.properties
@@ -5,3 +5,6 @@ server.port=9000
 
 # 注册中心地址
 spring.cloud.nacos.server-addr=127.0.0.1:8848
+
+# 导入配置检查
+#spring.cloud.nacos.config.import-check.enabled=false
