--- a/cloud-demo/services/services-order/src/main/resources/application.properties
+++ b/cloud-demo/services/services-order/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.cloud.nacos.server-addr=127.0.0.1:8848
 
 # 导入nacos中的配置属性
 spring.config.import=nacos:service-order.properties
+
+# 当配置中心和application.properties中都存在同名属性时，优先使用配置中心的属性
+order.timeout=30min
+order.auto-confirm=1d
