feat: 添加订单配置属性支持，整合application.yml与application.properties

--- a/cloud-demo/services/services-order/src/main/resources/application.properties
+++ b/cloud-demo/services/services-order/src/main/resources/application.properties
@@ -11,5 +11,6 @@ spring.cloud.nacos.server-addr=127.0.0.1:8848
 spring.config.import=nacos:service-order.properties
 
 # 当配置中心和application.properties中都存在同名属性时，优先使用配置中心的属性
-order.timeout=30min
-order.auto-confirm=1d
+# properties的优先级会覆盖yml中的配置中心属性
+#order.timeout=60min
+#order.auto-confirm=1-0d
